syntax = "proto3";

package user_rpc;
option go_package = "./user_rpc";

message UserCreateRequest {
  string nick_name = 1;
  string password = 2;
  int32 role = 3;
  string avatar = 4;
  string open_id = 5;
  string RegisterSource = 6;
}

message UserCreateResponse {
  int32 user_id = 1;
}

message UserInfoRequest {
  uint32 user_id = 1;
}

message UserInfoResponse {
  bytes data = 1; // 用户和用户配置信息的json
}

service Users {
  rpc UserCreate(UserCreateRequest) returns(UserCreateResponse); // 创建用户
  rpc UserInfo(UserInfoRequest) returns(UserInfoResponse); // 用户信息
}


// goctl rpc protoc user_rpc.proto --go_out=./types --go-grpc_out=./types --zrpc_out=.
